Se han subido ambas lecciones

--- a/Lecciones/LeccionesCorte1/Leccion3/L3/10BordeCSS.html
+++ b/Lecciones/LeccionesCorte1/Leccion3/L3/10BordeCSS.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>10 Borde Css</title>
 </head>
 <body>
     <div style="border: 5px dotted red;">
