--- a/Lecciones/LeccionesCorte1/Leccion3/L3/1Encabezados.html
+++ b/Lecciones/LeccionesCorte1/Leccion3/L3/1Encabezados.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            Mi pagina Web!
+            1 Encabezados
         </title>
     </head>
     <body>
