--- a/Lecciones/LeccionesCorte1/Leccion3/L3/2Listas.html
+++ b/Lecciones/LeccionesCorte1/Leccion3/L3/2Listas.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My Web Page!</title>        
+        <title>2 Listas</title>        
     </head>
     <body>
         An Unordered List:
