--- a/Lecciones/LeccionesCorte1/Leccion3/L3/8Relleno.html
+++ b/Lecciones/LeccionesCorte1/Leccion3/L3/8Relleno.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>My Web Page</title>
+        <title>Relleno</title>
         <style>
             div{
                 background-color: teal;
