--- a/Lecciones/LeccionesCorte1/Leccion3/L3/9Fuente.html
+++ b/Lecciones/LeccionesCorte1/Leccion3/L3/9Fuente.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>9 Fuente</title>
 </head>
 <body>
     <h1 style="font-family: Arial, sans-serif;
