--- a/Lecciones/LeccionesCorte1/Leccion3/L3/3Imagenes.html
+++ b/Lecciones/LeccionesCorte1/Leccion3/L3/3Imagenes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My Web Page!</title>        
+        <title>3 Imágenes</title>        
     </head>
     <body>
         <img src="logo.png"alt="logo" width="300" height="200">
