--- a/Lecciones/LeccionesCorte1/Leccion3/L3/4Tablas.html
+++ b/Lecciones/LeccionesCorte1/Leccion3/L3/4Tablas.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My web Page!</title>
+        <title>4 Tablas</title>
     </head>
     <body>
         <h1>Presidents</h1>
