--- a/Lecciones/LeccionesCorte1/Leccion3/L3/6CSS.html
+++ b/Lecciones/LeccionesCorte1/Leccion3/L3/6CSS.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My Web PAge!</title>
+        <title>CSS</title>
     </head>
     <body>
         <h1 style="color:red;text-align:center;">Welcome to My Web Page</h1>
