Se han agregado los problemas de Python!

--- a/Lecciones/LeccionesCorte1/Leccion3/menulec3.html
+++ b/Lecciones/LeccionesCorte1/Leccion3/menulec3.html
@@ -180,7 +180,7 @@
     
     .btn-info:hover 
     {
-        color: black;
+        color: black!important;
         background-color: whitesmoke!important;
     }
     </style>
