Se han agregado las listas de canciones en Albums!

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -8,21 +9,22 @@
     <link rel="stylesheet" href="cssnobootstrap/estilosSplash.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 </head>
+
 <body style="background-color: #F9BF0B ;">
+
 
     <div class="container " style="
       position:absolute;
       top: 25%;
       left: 9%;
       ">
-       <h1 class="display-1 mb-1 text-center " style="color: whitesmoke;"> GIT DE ARTIÑO!</h1>
-       <img src="img/git.png" class="img-fluid" alt="Responsive image" style="
+        <h1 class="display-1 mb-1 text-center " style="color: whitesmoke;"> GIT DE ARTIÑO!</h1>
+        <img src="img/git.png" class="img-fluid" alt="Responsive image" style="
        position: relative;
         width: 10%;
         left: 45%;">
 
-        <a href="index2.html" class="btn btn-info" role="button"
-        style="
+        <a href="index2.html" class="btn btn-info" role="button" style="
         color: white;
         font-size: 140%;
         background-color: #8E44AD ;
@@ -30,9 +32,7 @@
 
         position:fixed;
           top: 65%;
-          left: 46.5%;"
-
-        data-toggle="tooltip" data-placement="bottom" title="Desarrollo de Aplicaciones Web.">ENTRAR!</a>
+          left: 46.5%;" data-toggle="tooltip" data-placement="bottom" title="Desarrollo de Aplicaciones Web.">ENTRAR!</a>
     </div>
 
 
@@ -45,18 +45,17 @@
 
 
     <style>
-
-    .btn-info:hover
-    {
-        background-color: #5B2C6F!important;
-    }
+        .btn-info:hover {
+            background-color: #5B2C6F !important;
+        }
     </style>
 
     <script>
-        $(document).ready(function(){
+        $(document).ready(function() {
             $('[data-toggle="tooltip"]').tooltip();
         });
     </script>
 
 </body>
+
 </html>
