Se ha hecho responsive la pagina index y se ha documentado cada página con comentarios

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body style="background-color: #F9BF0B ;">
 
-
+    <!--Container de todo-->
     <div class="container " style="
       position:absolute;
       top: 25%;
@@ -23,33 +23,34 @@
        position: relative;
         width: 10%;
         left: 45%;">
+        <br>
+        <br>
+        <center>
+            <a href="index2.html" class="btn btn-info" role="button" style="
+            color: white;
+            font-size: 140%;
+            background-color: #8E44AD ;
+            border-color: #5B2C6F;" data-toggle="tooltip" data-placement="bottom" title="Desarrollo de Aplicaciones Web.">ENTRAR!</a>           
+        </center>
 
-        <a href="index2.html" class="btn btn-info" role="button" style="
-        color: white;
-        font-size: 140%;
-        background-color: #8E44AD ;
-        border-color: #5B2C6F;
-
-        position:fixed;
-          top: 65%;
-          left: 46.5%;" data-toggle="tooltip" data-placement="bottom" title="Desarrollo de Aplicaciones Web.">ENTRAR!</a>
     </div>
 
 
 
 
-
+    <!--Documentos JS-->
     <script src="js/jquery-3.3.1.slim.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 
-
+    <!--Hover a boton-->
     <style>
         .btn-info:hover {
             background-color: #5B2C6F !important;
         }
     </style>
 
+    <!--Funciòn toogle-->
     <script>
         $(document).ready(function() {
             $('[data-toggle="tooltip"]').tooltip();
