--- a/index2.html
+++ b/index2.html
@@ -59,7 +59,8 @@
                     <a id="leccion2" class="dropdown-item" href="Lecciones/LeccionesCorte1/Leccion4/menulec4.html">Lección 4</a>
                 </div>
             </li>
-
+            
+            <!-- Link a problemas de python -->
             <li class="nav-item">
                 <a class="nav-link" href="ProblemasPython/indexPython.html">Problemas Python</a>
             </li>
@@ -69,7 +70,7 @@
 
 
 
-
+    <!--footer-->
     <nav class="navbar navbar-expand-sm navbar-dark fixed-bottom  " style="background-color: #20B46C ">
         <a class="navbar-brand" href="https://www.lerdo.tecnm.mx/">ITSL</a>
         <ul class="navbar-nav">
@@ -80,6 +81,7 @@
     </nav>
 
 
+    <!--Modal de avisos -->  
     <div class="container">
         <div class="modal fade" id="myModal" role="dialog">
             <div class="modal-dialog modal-sm">
@@ -88,8 +90,9 @@
                         <h4 class="modal-title text-center" style="color: whitesmoke">Git Artiño - Aviso!</h4>
                     </div>
                     <div class="modal-body">
-                        <p>Está agregada la leccion 3.</p>
-                        <p>Está agregada la leccion 4.</p>
+                        <p>Está agregada la leccion 3 y 4.</p>
+                        <p>Están agregados los problemas de Python.</p>
+                        <p>Está agregado el proeycto0.</p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
@@ -101,11 +104,13 @@
 
 
 
-
+    <!--JavaScript-->
     <script src="js/jquery-3.3.1.slim.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 
+   
+    <!--Funcion JS Modal-->
     <script type="text/javascript">
         $(function() {
             $("#myModal").modal();
