Se ha agregado el Login del Proyecto 1

--- a/index2.html
+++ b/index2.html
@@ -89,6 +89,11 @@
                 </div>
             </li>
 
+            <!-- Link a proyecto 0 -->
+            <li class="nav-item">
+                <a class="nav-link" href="Proyecto1/templates/index.html">Proyecto 1</a>
+            </li>
+
         </ul>
     </nav>
 
@@ -114,7 +119,7 @@
                         <h4 class="modal-title text-center" style="color: whitesmoke">Git Artiño - Aviso!</h4>
                     </div>
                     <div class="modal-body">
-                        <p>Se ha agregado la Lección 7.</p>
+                        <p>Se ha agregado la Lección 7 y avance del Proyecto1.</p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
